# localfile-kb

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: DEVELOPMENT_V3.md  FRONTEND_DESIGN.md  PRD.md  README.md
docs/Word_version/: PRD.docx  SYSTEM_DESIGN.docx
scripts/: start.sh
src/filekb/: __init__.py  __main__.py  cli.py  config.py  dedup.py  embed.py  entity_qa.py  extractor.py  graph_store.py  llm.py  ocr.py  parser.py  personalization.py  query.py  resilience.py  server.py  splitter.py  store.py  vector_store.py  watcher.py
src/filekb/prompts/: answer.txt  extract.txt  extract_zh.txt
src/filekb/ui/: __init__.py  app.py  chat.py  entity_review.py  files.py  graph.py  status.py
src/filekb/ui/pages/: 02_🔗_知识图谱.py  05_⚙️_系统设置.py  chat.py  entity_review.py  files.py  graph.py  kb_management.py  settings.py  status.py
src/filekb/ui/views/: chat.py  entity_review.py  files.py  graph.py  kb_management.py  settings.py  status.py
tests/: conftest.py  test_dedup.py  test_entity_resolver.py  test_feedback.py  test_parser.py  test_resilience.py  test_splitter.py  test_store.py  test_watcher.py
tests/data/: sample.csv  sample.json  sample.md  sample.py  sample_zh.md
tests/integration/: test_checkpoint_resume.py  test_chinese_extraction.py  test_fault_isolation.py  test_index_pipeline_e2e.py  test_pipeline_fixes_systematic.py  test_query_feedback.py
