[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "filekb"
version = "0.1.1"
description = "File-driven personal knowledge base — 100% local, zero cloud"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "FileKB Contributors"},
]
keywords = [
    "knowledge-graph",
    "knowledge-base",
    "personal-knowledge-management",
    "local-llm",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.35",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "tenacity>=8.5",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "networkx>=3.3",
    "markitdown[all]>=0.0.2",
    "pymupdf>=1.24",
    "jieba>=0.42",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
deepke = [
    "deepke>=2.0",
    "transformers>=4.40",
]
apple-silicon = [
    "faiss-mps>=1.8",
]

[project.scripts]
filekb = "filekb.cli:main"

[project.urls]
Repository = "https://github.com/webclock2000/localfile-kb"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["filekb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "llm: marks tests that require a running LLM server",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["filekb"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
